[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Plataforma.gd" type="Script" id=1]
[ext_resource path="res://assets/plataforma.png" type="Texture" id=2]


[sub_resource type="CapsuleShape2D" id=1]
radius = 11.4281
height = 191.127

[sub_resource type="CapsuleShape2D" id=2]
radius = 11.0077
height = 192.002

[node name="Plataforma" type="StaticBody2D"]
position = Vector2( 262.815, 167.678 )
script = ExtResource( 1 )

[node name="Plataforma" type="Sprite" parent="."]
position = Vector2( 0.421753, -0.197159 )
scale = Vector2( 0.587655, 0.612759 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.174225, -0.492584 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 40.363, -2.94315 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -39.768, -0.913 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Up" type="Timer" parent="."]

[node name="Down" type="Timer" parent="."]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_Area2D_body_shape_exited"]
[connection signal="timeout" from="Up" to="." method="_on_Up_timeout"]
[connection signal="timeout" from="Down" to="." method="_on_Down_timeout"]
